--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -1,1 +1,7 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">ss
+/* Clase para los tipos de fuentes */
+.fuente {
+    font-family: 'Nunito';
+}
+.fuente1 {
+    font-family: 'Courier New', Courier, monospace;
+}
