Cards centradas en el div

--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -38,7 +38,7 @@
     background-color: #222831;
 }
 .fondoGris {
-    background-color: #393E46;
+    background-color: #393E46 !important;
 }
 .fondoNaranja {
     background-color: #F88E52 !important;
@@ -113,4 +113,8 @@
     justify-content: center;
     margin: auto;
     padding: auto;
+}
+
+.centrarDiv{
+    margin: auto;
 }
