--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -11,6 +11,12 @@
     background-size: cover;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 
 .login_link:hover {
      color: #F88E52;
