--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -1,7 +1,5 @@
 /*Author: Matthew Conde Oltra*/
 
-
-
 /* Clase para los tipos de fuentes */
 
 .banner {
@@ -21,93 +19,112 @@ html, body {
 .btn-primary {
     background-color: #F88E52 !important;
 }
+
 .login_link:hover {
-     color: #F88E52;
+    color: #F88E52;
 }
 
-.sizeXS{
-    font-size:8px;
+.sizeXS {
+    font-size: 8px;
 }
+
 .sizeS {
-    font-size:12px;
+    font-size: 12px;
 }
-.sizeTitlePopUp{
-    font-size:18px;
+
+.sizeTitlePopUp {
+    font-size: 18px;
 }
+
 .sizeM {
-    font-size:22px;
+    font-size: 22px;
 }
+
 .sizeL {
-    font-size:32px;
+    font-size: 32px;
 }
+
 .fondoOscuro {
     background-color: #222831;
 }
+
 .fondoGris {
     background-color: #393E46 !important;
 }
+
 .fondoNaranja {
     background-color: #F88E52 !important;
 }
+
 .fondoBlanco {
     background-color: #ffffff;
 }
 
-.bordeOscuro{
+.bordeOscuro {
     border-color: #222831;
 }
 
-.bordeGris{
-    border-color: #393E46 !important; 
+.bordeGris {
+    border-color: #393E46 !important;
 }
 
-.bordeNaranja{
+.bordeNaranja {
     border-color: #F88E52 !important;
 }
 
-.bordeBlanco{
+.bordeBlanco {
     border-color: #ffffff;
 }
 
 .blanco {
     color: #ffffff;
 }
+
 .naranja {
     color: #F88E52;
 }
+
 .azulOscuro {
     color: #222831;
 }
-.grisAzulado{
+
+.grisAzulado {
     color: #393E46;
 }
 
 /*Podemos organizar los elementos de un div, y/o etiqueta que queramos*/
-.centrado{
+
+.centrado {
     display: flex;
     justify-content: center;
 }
-.izquierda{
+
+.izquierda {
     display: flex;
     justify-content: left;
 }
-.derecha{
+
+.derecha {
     display: flex;
     justify-content: right;
 }
 
 /*Para las formas de algunas imagenes*/
+
 /*Este estilo es utilizado en la imagen del perfil*/
+
 .redonda {
-    width:130px;
-    height:130px;
+    width: 130px;
+    height: 130px;
     background-color: #393E46;
-    border-radius:160px;
-    border:5px solid #393E46;
+    border-radius: 160px;
+    border: 5px solid #393E46;
 }
-/*Para el texto*/ 
-.alinear{
-    display:flex;
+
+/*Para el texto*/
+
+.alinear {
+    display: flex;
     justify-content: center;
     margin: auto;
     padding: auto;
@@ -121,13 +138,14 @@ html, body {
     padding: auto;
 }
 
-.centrarDiv{
+.centrarDiv {
     margin: auto;
 }
 
-
 /*Para el css del template de bootstrap*/
+
 /*Para la foto de fondo*/
+
 header.masthead {
     text-align: center;
     color: #fff;
@@ -175,6 +193,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 /*Para el navbar*/
+
 #mainNav {
     background-color: #222831
 }
@@ -232,20 +251,23 @@ header.masthead .intro-text .intro-heading {
 }
 
 /*Para los objetos seleccionados*/
+/*
 ::selection {
     background: #F88E52;
     text-shadow: none
 }
 
 /*Para quitar borde azul de los botones de bootstrap*/
-.btn, .btn-primary{
-    outline: none !important; 
+
+.btn, .btn-primary {
+    outline: none !important;
     box-shadow: none !important;
     border-color: none !important;
     border: none !important;
 }
 
 /*Para el boton de ver mapa*/
+
 .btn-xl {
     font-size: 18px;
     padding: 20px 40px !important;
@@ -253,6 +275,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 /*Para las distintas secciones*/
+
 .page-section {
     padding: 100px 0
 }
@@ -262,3 +285,5 @@ header.masthead .intro-text .intro-heading {
         padding: 150px 0
     }
 }
+
+/*Para sección de app*/
