quitado una etiqueta body que sobra

--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -2,7 +2,10 @@
 
 /* Clase para el tamaño del mapa */
 
-
+.map{
+    height: 500px;
+    width: 100%;
+}
 
 /* Clase para los tipos de fuentes */
 
