--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -265,6 +265,10 @@ header.masthead .intro-text .intro-heading {
         border: none;
         background-color: #222831
     }
+    
+    #cuerpo {
+        margin-left: 0px !important;
+    }
 }
 
 /*Para los objetos seleccionados*/
@@ -337,43 +341,23 @@ header.masthead .intro-text .intro-heading {
     padding-top: 1rem;
     padding-bottom: 1rem;
 
-    height: 15%;
-    min-width: 925px;
-
     display: flex;
     justify-content: space-between;
 }
 
 /* CADA TARJETA */
 
-.tarjeta {
-    padding-top: 0rem;
-    padding-bottom: 0rem;
-    padding-left: 0rem;
-    padding-right: 0rem;
-
-    width: 20%;
-    height: 100%;
-    min-height: 58px;
-    min-width: 195px;
-    max-width: 220px;
-
+.tarjeta{    
     display: flex;
     justify-content: space-between;
-
-    overflow: auto;
 }
 
 /* DENTRO DE CADA TARJETA */
-
 
 .iconoTarjeta {
     padding-bottom: .5rem;
     padding-left: .4rem;
     padding-top: .5rem;
-
-    text-align: center;
-
 }
 
 .icono {
@@ -394,7 +378,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .valorTarjeta {
-    padding: 1.2rem;
+    padding: 1rem;
 
 
     text-align: center;
@@ -412,27 +396,17 @@ header.masthead .intro-text .intro-heading {
 /* SUBCUERPO */
 
 .subcuerpo {
-    width: 100%;
     height: 80%;
-    
-    display: flex;
-    justify-content: space-between;
 }
 
 /* TARJETAS INFORMACION DE CADA SENSOR */
 
 .tarjetasInfoSensores {
-    width: 49%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 /* TARJETA TODOS LOS SENSORES Y TARJETA INFORMACION DE UN SENSOR */
 
 .tarjetaInfo {
-    height: 48%;
 }
 
 /* /TARJETAS INFORMACION DE CADA SENSOR */
@@ -441,8 +415,6 @@ header.masthead .intro-text .intro-heading {
 
 
 .contenedorMapa {
-    height: 100%;
-    width: 49%;
 }
 
 /* /MAPA */
