--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -435,6 +435,10 @@ header.masthead .intro-text .intro-heading {
         height: 100%;
 }
 
+.map{
+    height: 100%;
+}
+
 /* /MAPA */
 
 /* /SUBCUERPO */
