--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -2,7 +2,7 @@
 
 /* Clase para el tamaño del mapa */
 
-.map{
+.map {
     height: 500px;
     width: 100%;
 }
@@ -272,7 +272,7 @@ header.masthead .intro-text .intro-heading {
         border: none;
         background-color: #222831
     }
-    
+
     #cuerpo {
         margin-left: 0px !important;
     }
@@ -354,7 +354,7 @@ header.masthead .intro-text .intro-heading {
 
 /* CADA TARJETA */
 
-.tarjeta{    
+.tarjeta {
     display: flex;
     justify-content: space-between;
 }
@@ -414,28 +414,50 @@ header.masthead .intro-text .intro-heading {
 
 /* TARJETA TODOS LOS SENSORES Y TARJETA INFORMACION DE UN SENSOR */
 
-.fila{
+.fila {
     height: 50%;
 }
 
 .tarjetaInfo {
-    
+
     height: 100%;
+}
+
+.contenedorListaDeSensores {
+    height: 100%;
+    padding: 0% !important;
+}
+
+.headerLista {
+    background-color: #222831;
+    color: white;
+    
+    width: 100%;
+    height: 20%;
+    
+    margin: 0% !important;
+}
+.textoSensores {
+    padding-left: 1rem;
+}
+
+.iconosEditar{
+    padding: 0% !important;
 }
 
 /* /TARJETAS INFORMACION DE CADA SENSOR */
 
 /* MAPA */
 
-.columnaMapa{
+.columnaMapa {
     height: 100%;
 }
 
 .contenedorMapa {
-        height: 100%;
+    height: 100%;
 }
 
-.map{
+.map {
     height: 100%;
 }
 
