--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -410,6 +410,7 @@ header.masthead .intro-text .intro-heading {
 
 .tarjetasInfoSensores {
     justify-content: space-between;
+    height: 100%;
 }
 
 /* TARJETA TODOS LOS SENSORES Y TARJETA INFORMACION DE UN SENSOR */
@@ -423,7 +424,7 @@ header.masthead .intro-text .intro-heading {
     height: 100%;
 }
 
-.contenedorListaDeSensores {
+.contenedorSensores {
     height: 100%;
     padding: 0% !important;
 }
@@ -433,16 +434,52 @@ header.masthead .intro-text .intro-heading {
     color: white;
     
     width: 100%;
-    height: 20%;
+    height: 20% !important;
     
     margin: 0% !important;
 }
+
+.contenedorLista{
+    height: 80%;
+}
+
+.lista{
+    list-style-type: none;
+    
+    height: 100%;
+    
+    padding: 0% !important;    
+}
+
+.elementoLista{
+    padding: 0% !important;
+    
+    border-bottom: 1px;
+    
+    width: 100%;
+    
+    margin: 0% !important;
+}
+
 .textoSensores {
     padding-left: 1rem;
 }
 
+.contenedorSearch{
+}
+
+.contenedorIconosEditar{
+    padding-top: 0% !important;
+    padding-bottom: 0% !important;
+    padding-right: 1rem !important;
+    padding-left: 0% !important;
+    
+    align-items: center;
+}
+
 .iconosEditar{
-    padding: 0% !important;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 /* /TARJETAS INFORMACION DE CADA SENSOR */
