--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -448,7 +448,9 @@ header.masthead .intro-text .intro-heading {
     
     height: 100%;
     
-    padding: 0% !important;    
+    padding: 0% !important;
+    
+    overflow: auto;
 }
 
 .elementoLista{
@@ -459,6 +461,10 @@ header.masthead .intro-text .intro-heading {
     width: 100%;
     
     margin: 0% !important;
+}
+
+.ul.li.div{
+    text-align: center;
 }
 
 .textoSensores {
