--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -432,38 +432,52 @@ header.masthead .intro-text .intro-heading {
 .headerLista {
     background-color: #222831;
     color: white;
-    
+
     width: 100%;
     height: 20% !important;
-    
+
     margin: 0% !important;
 }
 
-.contenedorLista{
+.contenedorLista {
     height: 80%;
 }
 
-.lista{
+.lista {
     list-style-type: none;
-    
+
     height: 100%;
-    
+
     padding: 0% !important;
-    
+
     overflow: auto;
 }
 
-.elementoLista{
+.tarjetaLista {
     padding: 0% !important;
-    
+
     border-bottom: 1px;
-    
+
     width: 100%;
-    
+
     margin: 0% !important;
+
+    cursor: pointer;
+
 }
 
-.ul.li.div{
+.elementoLista {
+
+    width: 100%;
+    height: 100%;
+
+}
+
+.elementoLista:hover {
+    background-color: #F5E0D3 !important;
+}
+
+.ul.li.div {
     text-align: center;
 }
 
@@ -471,19 +485,31 @@ header.masthead .intro-text .intro-heading {
     padding-left: 1rem;
 }
 
-.contenedorSearch{
+.form-control{
+    background-color: #222831 !important;
 }
 
-.contenedorIconosEditar{
+.form-control.placeholder{
+    color: white;
+}
+
+.form-control:focus {
+    border-color: #F88E52 !important;
+    box-shadow: none !important;
+}
+
+.contenedorSearch {}
+
+.contenedorIconosEditar {
     padding-top: 0% !important;
     padding-bottom: 0% !important;
     padding-right: 1rem !important;
     padding-left: 0% !important;
-    
+
     align-items: center;
 }
 
-.iconosEditar{
+.iconosEditar {
     width: 1.5rem;
     height: 1.5rem;
 }
