--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -383,8 +383,8 @@ header.masthead .intro-text .intro-heading {
 
 }
 
-.textoTarjeta:hover{
-    cursor:default;
+.textoTarjeta:hover {
+    cursor: default;
 }
 
 .valorTarjeta {
@@ -395,8 +395,8 @@ header.masthead .intro-text .intro-heading {
     font-size: 1rem;
 }
 
-.valorTarjeta:hover{
-    cursor:default;
+.valorTarjeta:hover {
+    cursor: default;
 }
 
 /* /DENTRO DE CADA TARJETA */
@@ -449,7 +449,7 @@ header.masthead .intro-text .intro-heading {
     height: 1.5rem;
 }
 
-.iconoAdd:hover{
+.iconoAdd:hover {
     cursor: pointer;
     content: url(../images/addHover.png);
 }
@@ -459,13 +459,13 @@ header.masthead .intro-text .intro-heading {
     height: 1.5rem;
 }
 
-.iconoCan:hover{
+.iconoCan:hover {
     cursor: pointer;
-        content: url(../images/canHover.png);
+    content: url(../images/canHover.png);
 }
 
-.nombresLista:hover{
-    cursor:default;
+.nombresLista:hover {
+    cursor: default;
 }
 
 .contenedorLista {
@@ -511,15 +511,15 @@ header.masthead .intro-text .intro-heading {
     text-align: center;
 }
 
-.columnasInfoSensor{
+.columnasInfoSensor {
     text-align: center;
 }
 
-.col-1{
+.col-1 {
     padding: 0% !important;
 }
 
-.iconoDeCadaElemento{
+.iconoDeCadaElemento {
     width: 100%;
 }
 
@@ -527,15 +527,15 @@ header.masthead .intro-text .intro-heading {
     padding-left: 1rem;
 }
 
-.textoSensores:hover{
-    cursor:default;
+.textoSensores:hover {
+    cursor: default;
 }
 
-.form-control{
+.form-control {
     background-color: #222831 !important;
 }
 
-.form-control.placeholder{
+.form-control.placeholder {
     color: white;
 }
 
@@ -553,6 +553,32 @@ header.masthead .intro-text .intro-heading {
     padding-left: 0% !important;
 
     align-items: center;
+}
+
+.informacionUsuario {
+    widows: 100%;
+    height: 80%;
+}
+
+.divsInformacion {
+    height: 20%;
+    padding: .8rem;
+}
+
+.nombreYTipo {
+    width: 50%;
+}
+
+.id {
+    padding: .8rem;
+}
+
+.correo {
+    padding: .8rem;
+}
+
+.telefono {
+    padding: .8rem;
 }
 
 /* /TARJETAS INFORMACION DE CADA SENSOR */
