Ya va el tema del login
Falta cantidad de sensores segun estados

--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -633,7 +633,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .textoIncorrecto{
-    color: transparent;
+    color: red;
     margin-top: 1rem;
     text-align: center;
 }
