--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -211,15 +211,19 @@ header.masthead .intro-text .intro-heading {
 
 /*Para el navbar*/
 
+.navbarAdmin{
+/*si*/
+}
+
 #mainNav {
     background-color: #222831
 }
 
-.intro-heading:hover{
+.intro-heading:hover {
     cursor: default;
 }
 
-.intro-lead-in:hover{
+.intro-lead-in:hover {
     cursor: default;
 }
 
@@ -343,30 +347,30 @@ header.masthead .intro-text .intro-heading {
 
 /*Para la página del Admin*/
 
-.cerrarSesion{
+.cerrarSesion {
     width: 30% !important;
     padding-right: 0% !important;
-    
+
     text-align: right;
 }
 
-.modoSensores{
+.modoSensores {
     color: #F88E52;
 }
 
-.modoSensores:hover{
+.modoSensores:hover {
     color: #F5E0D3;
-    
+
     text-decoration: none;
 }
 
-.modoUsuarios{
+.modoUsuarios {
     color: white;
 }
 
-.modoUsuarios:hover{
+.modoUsuarios:hover {
     color: #F5E0D3;
-    
+
     text-decoration: none;
 }
 
@@ -374,14 +378,20 @@ header.masthead .intro-text .intro-heading {
 .contenedor {
     width: 100%;
     height: 100%;
+
+    position: relative;
+    z-index:2;
 }
 
 /* CUERPO */
 .cuerpo {
-    margin-top: 3rem;
+    margin-top: 2.5rem;
     margin-bottom: 3rem;
 
     height: 85%;
+
+    position: relative;
+    z-index:2;
 }
 
 /* TARJETAS INFORMACION GENERAL */
@@ -678,5 +688,68 @@ header.masthead .intro-text .intro-heading {
     text-align: center;
 }
 
+/* Animacion fondo */
 
-.footer {}
+.pulse1 {
+    position: relative;
+    z-index:2;
+    margin-left: 35%;
+    display: block;
+    width: 2px;
+    height: 0px;
+    border-radius: 50%;
+    background: transparent;
+    cursor: default;
+    box-shadow: 0 0 0 rgba(248, 142, 82, 0.4);
+    animation: pulse 2s;
+}
+
+.pulse2 {
+    position: relative;
+    z-index:2;
+    margin-left: 28%;
+    display: block;
+    width: 2px;
+    height: 0px;
+    border-radius: 50%;
+    background: transparent;
+    cursor: default;
+    box-shadow: 0 0 0 rgba(248, 142, 82, 0.4);
+    animation: pulse 2s;
+}
+
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+    }
+
+    70% {
+        -webkit-box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+    }
+
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+        box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+    }
+
+    70% {
+        -moz-box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+        box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+    }
+
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+        box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+    }
+}
+
+
+.footerAdmin {
+
+}
