Probelma responsive tarjeta con lista

--- a/Servidor/ux/css/estilos.css
+++ b/Servidor/ux/css/estilos.css
@@ -527,7 +527,7 @@ header.masthead .intro-text .intro-heading {
 .lista {
     list-style-type: none;
 
-    height: 87%;
+    height: 10.5rem;
 
     padding-left: 0% !important;
     padding-top: .5% !important;
