--- a/ux/css/estilos.css
+++ b/ux/css/estilos.css
@@ -675,7 +675,7 @@ header.masthead .intro-text .intro-heading {
 
 /* MAPA */
 
-.contenedorCalendario{
+.tarjetaCalendario{
 display:inline-block;
 }
 
