--- a/ux/css/estilos.css
+++ b/ux/css/estilos.css
@@ -168,7 +168,7 @@ body {
 header.masthead {
     text-align: center;
     color: #fff;
-    background-image: url(../images/header-bg.png);
+    background-image: url(../images/header-bg.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
