--- a/ux/css/estilos.css
+++ b/ux/css/estilos.css
@@ -1,10 +1,8 @@
 /*Author: Matthew Conde Oltra*/
 
 /* Clase para el tamaño del mapa */
-
-
 .map {
-    height: 600px;
+    height: 800px;
     width: 100%;
 }
 
@@ -14,8 +12,7 @@
 }
 
 /* Clase para la Leyenda del mapa */
-.gradient {
-}
+.gradient {}
 
 /* Clase para los tipos de fuentes */
 
@@ -168,7 +165,7 @@ body {
 header.masthead {
     text-align: center;
     color: #fff;
-    background-image: url(../images/header-bg.jpg);
+    background-image: url(../images/header-bg.png);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -215,15 +212,19 @@ header.masthead .intro-text .intro-heading {
 
 /*Para el navbar*/
 
+.navbarAdmin {
+    /*si*/
+}
+
 #mainNav {
     background-color: #222831
 }
 
-.intro-heading:hover{
+.intro-heading:hover {
     cursor: default;
 }
 
-.intro-lead-in:hover{
+.intro-lead-in:hover {
     cursor: default;
 }
 
@@ -347,18 +348,51 @@ header.masthead .intro-text .intro-heading {
 
 /*Para la página del Admin*/
 
+.cerrarSesion {
+    width: 30% !important;
+    padding-right: 0% !important;
+
+    text-align: right;
+}
+
+.modoSensores {
+    color: #F88E52;
+}
+
+.modoSensores:hover {
+    color: #F5E0D3 !important;
+
+    text-decoration: none;
+}
+
+.modoUsuarios {
+    color: white;
+}
+
+.modoUsuarios:hover {
+    color: #F5E0D3 !important;
+
+    text-decoration: none;
+}
+
 /* CONTENEDOR */
 .contenedor {
     width: 100%;
     height: 100%;
+
+    position: relative;
+    z-index: 2;
 }
 
 /* CUERPO */
 .cuerpo {
-    margin-top: 3rem;
+    margin-top: 2.5rem;
     margin-bottom: 3rem;
 
     height: 85%;
+
+    position: relative;
+    z-index: 2;
 }
 
 /* TARJETAS INFORMACION GENERAL */
@@ -436,6 +470,16 @@ header.masthead .intro-text .intro-heading {
     height: 100%;
 }
 
+.iconoDesvincular:hover {
+    cursor: pointer;
+    content: url(../images/desvincularNaranja.png);
+}
+
+.iconoDesvincular {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
 /* TARJETA TODOS LOS SENSORES Y TARJETA INFORMACION DE UN SENSOR */
 
 .fila {
@@ -462,6 +506,26 @@ header.masthead .intro-text .intro-heading {
     margin: 0% !important;
 }
 
+.iconoError {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.iconoError:hover {
+    cursor: pointer;
+    content: url(../images/warningHover.png);
+}
+
+.iconoErrorSeleccionado {
+    content: url(../images/warningHover.png);
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.iconoErrorSeleccionado:hover {
+    cursor: pointer;
+}
+
 .iconoAdd {
     width: 1.5rem;
     height: 1.5rem;
@@ -482,23 +546,31 @@ header.masthead .intro-text .intro-heading {
     content: url(../images/canHover.png);
 }
 
-.nombresLista:hover {
-    cursor: default;
-}
-
 .contenedorLista {
     height: 80%;
     overflow: hidden;
 }
 
+.nombresLista {
+    height: 12%;
+}
+
+.nombresLista:hover {
+    cursor: default;
+}
+
 .lista {
     list-style-type: none;
 
-    height: 100%;
+    height: 89%;
 
-    padding: 0% !important;
+    padding-left: 0% !important;
+    padding-top: .5% !important;
+    margin-bottom: 0% !important;
 
     overflow: auto;
+
+    background: #C9CFD8;
 }
 
 .tarjetaLista {
@@ -514,6 +586,14 @@ header.masthead .intro-text .intro-heading {
 
 }
 
+.elementoNaranja {
+    background-color: #F88E52;
+}
+
+.elementoNaranja:hover {
+    background-color: #F7A171 !important;
+}
+
 .elementoLista {
 
     width: 100%;
@@ -522,7 +602,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .elementoLista:hover {
-    background-color: #F5E0D3 !important;
+    background-color: #F5E0D3;
 }
 
 .ul.li.div {
@@ -562,7 +642,9 @@ header.masthead .intro-text .intro-heading {
     box-shadow: none !important;
 }
 
-.contenedorSearch {}
+.contenedorSearch {
+    padding-left: 0px !important;
+}
 
 .contenedorIconosEditar {
     padding-top: 0% !important;
@@ -614,8 +696,25 @@ header.masthead .intro-text .intro-heading {
 
 /* MAPA */
 
+.tarjetaCalendario {
+    display: inline-block;
+}
+
+.tarjetaBotonPDF {
+    display: inline-block;
+}
+
+.tarjetaBotonPDF:hover{
+    cursor: pointer;
+}
+
+.iconoPDF{
+    width: 1.7rem;
+    height: 1.7rem;
+}
+
 .columnaMapa {
-    height: 100%;
+    height: 92%;
 }
 
 .contenedorMapa {
@@ -636,7 +735,10 @@ header.masthead .intro-text .intro-heading {
 /* Estilos LoginAdmin */
 
 .contenedorLogin {
-    margin: 20%;
+    margin-top: 17%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 20%;
 }
 
 .entradaTexto {
@@ -655,19 +757,73 @@ header.masthead .intro-text .intro-heading {
     text-align: center;
 }
 
+/* Animacion fondo */
 
-.footer {}
-
-/*.carousel-control-next,
-.carousel-control-prev {
-    filter: invert(100%);
+.contenedorPulsos {
+    height: 2px;
 }
 
-.carousel-indicators li {
-    filter: invert(100%);
-}*/
-
-.carousel-inner{
-    width:100%;
-    height: 225px !important;
+.pulse1 {
+    position: relative;
+    z-index: 2;
+    margin-left: 35%;
+    display: block;
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    background: transparent;
+    cursor: default;
+    box-shadow: 0 0 0 rgba(248, 142, 82, 0.4);
+    animation: pulse 1.5s;
 }
+
+.pulse2 {
+    position: relative;
+    z-index: 2;
+    margin-left: 28%;
+    display: block;
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    background: transparent;
+    cursor: default;
+    box-shadow: 0 0 0 rgba(248, 142, 82, 0.4);
+    animation: pulse 1.5s;
+}
+
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+    }
+
+    70% {
+        -webkit-box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+    }
+
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+        box-shadow: 0 0 0 0 rgba(248, 142, 82, 0.4);
+    }
+
+    70% {
+        -moz-box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+        box-shadow: 0 0 0 1500px rgba(248, 142, 82, 0);
+    }
+
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+        box-shadow: 0 0 0 0 rgba(248, 142, 82, 0);
+    }
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.footerAdmin {}
